--- a/mysql/Index(索引)/高性能索引.md
+++ b/mysql/Index(索引)/高性能索引.md
@@ -62,7 +62,7 @@ ignore index 让优化器忽略掉某些索引
 否则就实际去测试吧...经验法则未必适合所有的场景.
 
 
-## 5. 聚簇索引
+## 5. 聚簇索引 (InnoDB)
 并不是一种单独的索引类型, 而是一种数据存储格式.
         
         
