--- a/mysql/Index(索引)/0.Index(索引).md
+++ b/mysql/Index(索引)/0.Index(索引).md
@@ -1,6 +1,6 @@
 # 索引
 
-索引 是 **存储引擎** 用与快速找到记录的一种数据结构. 这是缩影最基本的功能.
+索引 是 **存储引擎** 用与快速找到记录的一种数据结构. 这是索引最基本的功能.
     
     在 mysql 中, 存储引擎用类似的方法使用索引, 先在索引中找到对应的值, 
     然后根据这些值去找到对应的数据行. 
