--- a/git/1.Branch(分支).md
+++ b/git/1.Branch(分支).md
@@ -1,5 +1,4 @@
-# Branch(分支)
-
+# Branch\(分支\)
 
 ### 1. 查看分支
 
@@ -7,13 +6,11 @@
     git branch
 ```
 
-
 ### 2. 创建分支
 
 ```
     git branch <branch-name>
 ```
-
 
 ### 3. 切换分支
 
@@ -27,7 +24,7 @@
     git checkout -b <branch-name>
 ```
 
-### 5. 合并某分支到 __当前分支上__
+### 5. 合并某分支到 **当前分支上**
 
 ```
     // fast forward 合并模式
@@ -63,7 +60,6 @@
     git stash grop stash@{0}
     // 恢复最近一次的工作副本, 并且删除该副本
     git stash pop
-    
 ```
 
 ### 9. 与远程服务器
@@ -82,5 +78,6 @@
     // 从远程分支抓取
     git pull
 ```
+
 
 
