--- a/mysql/Index(索引)/1.高性能索引.md
+++ b/mysql/Index(索引)/1.高性能索引.md
@@ -65,6 +65,41 @@ ignore index 让优化器忽略掉某些索引
 ## 5. 聚簇索引 (InnoDB)
 并不是一种单独的索引类型, 而是一种数据存储格式.
 
+InnoDB的聚簇索引就是在同一个结构中保存了B-Tree索引和数据行. (想想myisam)
+
+InnoDB默认会选择表的主键(primary key), 如果没有这样的索引, 
+InnoDB存储引擎会隐试的定义一个"主键"来作为聚簇索引
+
+好处:
+
+    1. 把相关的数据保存在一起, (同一个"页面"内的数据, 这里指硬盘的页, 相对的文件碎片会少些)
+    
+    2. 数据访问更快. 因为聚簇索引将数据和索引保存在同一个B-Tree中.
+    
+    3. 覆盖索引扫描的查询可以直接使用 页节点(B-Tree的页节点) 的主键值.
+    
+缺点:
+    
+    1. 提升I/O密集型应用的性能. 如果能把数据全部放在内存中, 
+    那么顺序I/O访问就不重要了,聚簇索引也就没有了优势
+    
+    2. 插入速度严重依赖于插入顺序. 顺序写入的速度最快. 
+    (如果不是主键顺序写入的话,在加载完数据后,最好 OPTIMIZE TABLE下)
+    
+    3. 更新聚簇索引列的代价非常高, 因为InnoDB会强制被更新的行移动到新位置(在硬盘中的位置)
+    
+    4. 在插入 或 更新时, 可能造成"页分裂"(硬盘中的).
+    当某个页存满时(写入或更新数据到该行), 存储引擎会将该页分裂为两个页来存储数据该行数据
+    
+    5. 可能会导致全表扫描变慢, 在行比较稀疏(主键列不连续), 或者页分裂较多的情况下导致数据存储不连续
+    
+    6. 二级索引需要访问两次索引查找, 而不是一次.
+    
+    
+    
+** InnoDB和MyISAM存放表的抽象图 **
+
+![](/assets/InnoDB和MyISAM存放表的抽象图.png)
 
         
         
