--- a/mysql/Index(索引)/1.高性能索引.md
+++ b/mysql/Index(索引)/1.高性能索引.md
@@ -102,7 +102,18 @@ InnoDB存储引擎会隐试的定义一个"主键"来作为聚簇索引
 ![](/assets/InnoDB和MyISAM存放表的抽象图.png)
 
 
+** 在InnoDB表中按主键的顺序写入行 **
 
+最简单的是使用 AUTO_INCREMENT 的自增列.
+
+最好避免随机的(不连续的且值分布范围非常大的)聚簇索引. 比如UUID.
+
+
+** 顺序的主键造成的问题 **
+在高并发的情况下. 按主键顺序插入可能会造成争用, 并发插入可能导致间隙锁. 写入可能会成为瓶颈.
+
+
+## 6. 覆盖索引
 
         
         
