--- a/mysql/Index(索引)/1.高性能索引.md
+++ b/mysql/Index(索引)/1.高性能索引.md
@@ -115,8 +115,116 @@ InnoDB存储引擎会隐试的定义一个"主键"来作为聚簇索引
 
 ## 6. 覆盖索引
 
+    mysql有时也可以使用索引来直接获取列的数据. (这样做就不再需要读取数据行了)
+    
+一个索引包含(或者说覆盖)所有需要查询的字段的值 ---> 覆盖索引
+
+** 只需要扫描索引而无需回表 **
+
+    1. 索引的条目通常是小于数据行数的. 减少数据的访问量, 减少磁盘I/O. 
+    因为索引通常比数据更小, 可以更好的放入内存. (尤其是MyISAM, 其可以压缩索引)
+    
+    2. 一般情况下索引是按照列值得顺序存储的(至少是在"单个硬盘页"内是这样的). 
+    所以对于范围查询(<,>等)会好些, 部分随机I/O访问变成顺序I/O. 
+    (OPTIMIZE 命令优化索引完全顺序排列)
+    
+    3. MyISAM 存储引擎只在内存中缓存索引, 数据的缓存完全依赖于操作系统. 
+    所以在访问数据时会进行一次系统调用,这可能有严重的系统性能问题.
+    
+    4. InnoDB 存储引擎使用的是聚簇索引, 而且 InnoDB 的二级索引在叶子节点中保存的是行的**主键值**,
+    如果二级索引可以覆盖查询, 那么久不用再去访问一次聚簇索引进行二次查询了.
+    
+    
+##### 覆盖索引的使用条件
+**在 索引中 满足查询的成本 比 查询行 的成本 小 时**
+
+    维护索引也是有代价的, 更新记录行时, 新增记录行时, 还有事务中 等等.
+
+覆盖索引必须要存储索引列的值.
+mysql 只能会用 B-Tree 索引做覆盖索引.
+哈希索引, 空间索引, 和全文索引 都不存储索引列的值.
+
+** 覆盖索引的  坑 **
+    
+    mysql 查询优化器会在执行查询前 判断是否有一个索引能进行覆盖. 如果索引覆盖了 where 条件中的字段, 
+    但不是整个查询涉及的字段, 如果条件为假, mysql5.5和其之前的版本也总是会回表获取数据行.
+    (取一些不需要的数据, 然后在过滤掉返回给客户端)
+
+Tips:
+InnoDB 的二级索引的叶子节点都包含了主键值, 变相的 相当于 
+key (username) == key (username,id) ---> 其实 id 是 username 列上的索引中保存的值
+
+
+      
+## 7. 通过索引扫描来做排序
+
+mysql 的排序方式有两种:
+    
+    1. 普通的排序操作 file_sort
+    
+    2. 按索引顺序扫描
+    
+如果有 join 操作的时候, order by 后的所有字段都是第一张表的时候, 才能使用到索引来排序. 
+并且也需要满足 **索引的最左前缀原则** 
+
+    ps: 
+        key i_date_username_age (date, username, age)
+
+        ** 但是 如果将排序的第一个字段被制定为常量时,可以不遵循最左前缀原则 **   
+        
+        select ... WHERE date = 2017-08-08 order by username, age        
+        
+        ** 排序的顺序也很重要 ASC / DESC ** 
+        排序不同,不能使用索引
+        select ... WHERE date = 2017-08-08 order by username asc, age desc  
+        
+        ** 注意范围条件 是不能使用索引来排序的 **
+
+        select ... where date < 2017-08-08 order username, age
         
         
-        
-        
+## 8. 压缩索引
+
+针对 MyISAM 引擎, 减小索引的大小, 可以让更多的索引放在内存中. 
+
+ 
+  
+   
+    
+## 9. 冗余和重复的索引
+
+ 每创建一个索引, mysql 都要对其进行维护, 并且优化器在优化的时候, 也会去逐个进行考虑. 
+ 
+  如果有了(a, b), 有建了(a),  那么(a)就是重复的索引了, 可以删除掉.
+  但是(b,a)相对而(a,b)来说就不是冗余索引.
+  对于 InnoDB 存储引擎, (a,id) 索引, id 就是多余的了, 因为索引 a 的值就是其对应的 id.
+    
+      
+          
+## 10. 未使用的索引
+删除之.
+percona toolkit ---> pt-index-usage
+
+
+
+## 11. 索引和锁
+
+
+索引可以让 锁定 根据索引过滤出来的数据行.
+InnoDB只有在访问数据行的时候, 才会对其加锁. 而索引可以减少InnoDB访问的数据行. 
+    
+    InnoDB 根据索引检索数据返回给mysql服务器层后, mysql 服务器根据where字句过滤数据.
+    此时, 这些数据行已经被锁住了. 
+    
+    全表扫描的话就等于是锁表了.
+    
+ps: InnoDB在 **二级索引**上使用的是 **共享(读)锁**, **主键索引**的时候是 **排他(写)锁**.
+
+    
+    
+    
+    
+    
+    
+    
         
