--- a/mysql/Index(索引)/1.高性能索引.md
+++ b/mysql/Index(索引)/1.高性能索引.md
@@ -135,8 +135,8 @@ InnoDB存储引擎会隐试的定义一个"主键"来作为聚簇索引
     如果二级索引可以覆盖查询, 那么久不用再去访问一次聚簇索引进行二次查询了.
     
     
-##### 覆盖索引的使用条件
-**在 索引中 满足查询的成本 比 查询行 的成本 小 时**
+### 覆盖索引的使用条件
+**在 索引中 满足查询的成本 比 查询行 的成本 小很多 时**
 
     维护索引也是有代价的, 更新记录行时, 新增记录行时, 还有事务中 等等.
 
